--- a/page1.html
+++ b/page1.html
@@ -3,11 +3,26 @@
 <head>
     <title>Mypage</title>
 </head>
-<Body>
+<body>
     <h1>Headline info</h1>
     <p>in this section is the first area for text</p>
-</Body>
 
+    <h1>This is going to be the second heading</h1>
+    <p>Where further information is shared on the page</p>
+</body>
+<style>
+    *{background-color: darkslategrey;}
+    p{
+        text-align: center;
+        background-color: blueviolet;
+        color: white;
+    }
+    h1{
+        background-color: darkolivegreen;
+
+
+    }
+</style>
 
 
 </html>
